--- a/src/components/MainPage/mainpage.css
+++ b/src/components/MainPage/mainpage.css
@@ -1,8 +1,10 @@
 .inclusive{
-    background-image: url(https://1.bp.blogspot.com/-Ch05JvXLM_M/WFg2gS4SRDI/AAAAAAAANls/hAjSrFATdMM5ZiURE0jr2JbPyCK0TSanACLcB/s1600/black-background-2.jpg);
 height: 200vh;
-
-}
+background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTO-rcvDUWTpNNa8wGfL0S6v8Q1CVs5u5t94A&usqp=CAU) no-repeat center center fixed; 
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;}
 
 .card-container {
     display: grid;
